cluster/apps/organizers/prowlarr/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: organizers
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`prowlarr.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: prowlarr
          port: 9696
  tls:
    secretName: ${SECRET_CERT}
